# tablex

./: .gitmodules  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/commands/: add-serena.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/: design-crud-operations.md  design-ui-modernization.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs
src-tauri/src/commands/: ai.rs  connection.rs  connections.rs  export.rs  mod.rs  query.rs  query_history.rs  schema.rs  settings.rs  table_data.rs
src-tauri/src/db/: connection.rs  mod.rs  queries.rs  row_utils.rs  sql_utils.rs
src-tauri/src/types/: ai.rs  connection.rs  mod.rs  query.rs  schema.rs  table_data.rs
src/components/: ErrorBoundary.tsx
src/components/ai/: AiQueryBar.tsx  AiSettingsDialog.tsx  QueryHistory.tsx  index.ts
src/components/connection/: ConnectionDialog.tsx  index.ts
src/components/editor/: SqlEditor.tsx
src/components/er-diagram/: ErDiagram.tsx  TableNode.tsx  index.ts
src/components/layout/: Header.tsx  MainPanel.tsx  ResizableLayout.tsx  Sidebar.tsx  (+2 more)
src/hooks/: useColumnResize.test.ts  useColumnResize.ts  useTheme.test.ts  useTheme.ts
src/lib/: utils.test.ts
src/store/: aiStore.ts  connectionStore.ts  queryStore.test.ts  queryStore.ts  schemaStore.ts
src/test/: setup.ts
src/types/: ai.ts  connection.ts  query.ts  schema.ts
(+19 files in other folders)
